--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
                 <artifactId>web3j-maven-plugin</artifactId>
                 <version>4.8.1</version>
                 <configuration>
-                    <packageName>by.mrj.besu.contract</packageName>
+                    <packageName>by.mrj.eth.contract</packageName>
                     <sourceDestination>src/main/java</sourceDestination>
                     <nativeJavaType>true</nativeJavaType>
                     <outputFormat>java</outputFormat>
